# quant_trading_system

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PRODUCTION_READINESS_AUDIT_REPORT.md  README.md  REPOSITORY_AUDIT_REPORT.md  alembic.ini  check.js  conftest.py  credentials.env.template  docker-compose.vault.yml  docker-compose.yml  dump.rdb  files_list.txt  frontend_script.js  main.py  nginx.conf  prefect.toml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  run_full_system.py  run_full_system.sh  setup.py  task.md  test_logs.py  test_side_mapping.py  vulture_report.txt  walkthrough.md
QuantResearchOS/: .gitignore  README.md  main.py  requirements.txt
agents/: llm_client.py
alpha_engine/: __init__.py  alpha_builder.py  alpha_explainer.py  alpha_filters.py  alpha_ranker.py  alpha_regime.py  alpha_reports.py  alpha_score.py  alpha_tracker.py  alpha_weights.py
api/: auth.py  main.py
api_layer/endpoints/: predictions.py
auth/: upstox_token_refresher.py
backtesting/: __init__.py  confidence_analysis.py  failure_analysis.py  historical_builder.py  performance_metrics.py  regime_analysis.py  trade_simulator.py  walk_forward.py
config/: disaster_recovery.yml  environment_config.py  settings.py  universe.py  vault_loader.py
continuous_learning/: feedback_loop.py
continuous_learning/attribution_engine/: contribution_engine.py  factor_attribution.py
continuous_learning/calibration/: calibration_monitor.py
continuous_learning/dashboards/: research_dashboard.py
continuous_learning/drift_detection/: data_drift.py  feature_drift.py  prediction_drift.py
continuous_learning/factor_evolution/: factor_evolution.py  regime_statistics.py
data_platform/: __init__.py  ring_buffer.py  upstox_client.py
database/: adjusted_equity_schema.sql  clickhouse_schema.sql  connection.py  db_async.py  db_sync.py  ems_schema.sql  experiment_schema.sql  init_schema.sql  instrument_master_schema.sql  market.duckdb  models.py  order_ledger_schema.sql  prediction_schema.sql  signal_schema.sql  universe_schema.sql
docs/: api_spec.yaml
explainability/: __init__.py  alpha_explainer.py  confidence_explainer.py  feature_explainer.py  historical_similarity.py  prediction_report.py  shap_explainer.py  signal_explainer.py
feature_layer/: QUICKSTART.md  README.md  __init__.py  base_feature.py  feature_analyzer.py  feature_correlation.py  feature_dashboard.py  feature_generator.py  feature_importance.py  feature_quality.py  feature_testing.py  feature_versioning.py
frontend/: .env.example  App.jsx  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
india_specific/: circuit_limits.py
llm/: base.py  huggingface_client.py  router.py
networking/: dpdk_client.py
observability_mlops/: __init__.py  alerting.py  health_check.py  prometheus_metrics.py
portfolio_execution/: __init__.py  config.py  drop_copy_reconciler.py  ems.py  event_bus.py  event_sourcing.py  events.py  liquidation.py  oms.py  orchestrator.py  state_manager.py  state_persistence.py  wal_journal.py
prediction_intelligence/: Label_models.py  __init__.py  base_lightgbm.py  base_logistic.py  base_lstm.py  base_xgboost.py  calibration.py  label_models.py  lightgbm_ranker.py  meta_ensemble.py  regime_model.py  signal_adapter.py  train_models.py  triple_barrier.py
quant_platform/: init_platform.py  run_experiment_demo.py
regime/: __init__.py  demo_regime_detection.py  market_regime.py  regime_features.py  regime_history.py  regime_rules.py
scripts/: audit_labels.py  check_no_production_mocks.py  compile_audit_report.py  evaluate_outcomes.py  execution_worker.py  generate_live_predictions.py  generate_live_predictions_patch.py  ingest_market_data.py  ingest_nse_data.py  ingest_yfinance_data.py  institutional_audit.py  populate_real_data.py  populate_upstox_data.py  resolve_outcomes.py  run_daytrading_backtest.py  run_live_loop.py  run_orb_backtest.py  run_walkforward_backtest.py  scheduler.py  sync_missing_prices.py  train_base_models.py  validate_migrations.py
signal_engine/: README.md  __init__.py  base.py  generator.py
tests/: __init__.py  test_alpha_engine_core.py  test_alpha_engine_integration.py  test_alpha_engine_unit.py  test_fred_macro.py  test_imports.py  test_regime_detection.py  test_upstox_client.py
utils/: api_circuit_breaker.py  api_helpers.py  blas_config.py  clickhouse_client.py  data_freshness_monitor.py  data_lineage.py  gpu_acceleration.py  history_persistence.py  init_directories.py  label_validator.py  logger.py  market_calendar.py  memory_budget.py  metadata_catalog.py  pit_validator.py  redis_limiter.py  regime_validator.py  secrets.py  structured_logger.py  system_tuning.py  tick_validator.py  time_utils.py  tracing.py  upstox_helper.py  versioned_datasets.py
validation/: __init__.py  daily_postmortem.py  feature_metadata.py  model_versioning.py  pipeline_validator.py  prediction_record.py  prediction_store.py  prediction_validator.py  validate_features.py  validate_labels.py  validate_missing_data.py  validate_ohlcv.py  validate_timezones.py  validation_report.py
(+402 files in other folders)
